--- a/publication/markdown/report.Rmd
+++ b/publication/markdown/report.Rmd
@@ -222,7 +222,8 @@ The Scotland level error rate for both 2016/17 and 2017/18 is around 3%. Further
 <Div custom-style = "Figure_Style">
 ```{r age-dist-chart, echo=FALSE, fig.cap = "alt text here"}
 include_graphics(
-  here("publication", "output", pub_date, paste0(pub_date, "_chart.png")), 
+  here("publication", "output", pub_date, "figures", 
+       paste0(pub_date, "_summary-chart.png")), 
   dpi = 600
 )
 ```
