--- a/publication/markdown/report.Rmd
+++ b/publication/markdown/report.Rmd
@@ -6,107 +6,13 @@ output:
 ---
 
 ```{r set-up, echo = FALSE, message = FALSE, warning = FALSE, error = FALSE}
-source(here::here("code", "00_setup-environment.R"))
+source(here::here("code", "publication", "00_setup-pub-environment.R"))
+
+pds <- read_rds(
+  here("data", "publication", glue("{pub_date}_pub-data.rds")),
+)
 
 latest_fy <- last(fy_in_pub)
-```
-
-
-```{r TableData, echo = FALSE, message = FALSE, warning = FALSE, error = FALSE}
-
-NHSBoard <- c("AA", "BR", "DG", "FF", "FV", "GR", "GGC", "HG", "LN", "LO", "NWTC", "OR", "SH", "TY", "WI", "Scotland")
-
-Q2Cases <- as.character(c(22, 2, 9, 9, 10, 16, 52, 9, 22, 44, 0, 1, 0, 24, 1, 221))
-
-Q2BedDaysBase <- c(72081, 21517, 27799, 49932, 47432, 84310, 232889, 43682, 91535, 150550, 6566, 2401, 2590, 72783, 4870, 910937)
-
-Q2BedDays <- format(Q2BedDaysBase, big.mark = ",")
-
-Q2RateBase <- c(30.5, 9.3, 32.4, 18.0, 21.1, 19.0, 22.3, 20.6, 24.0, 29.2, 0.0, 41.6, 0.0, 33.0, 20.5, 24.3)
-
-Q2Rate <- format(Q2RateBase, nsmall = 1)
-
-Q3Cases <- as.character(c(19, 6, 4, 10, 10, 30, 79, 16, 24, 36, 0, 1, 0, 22, 0, 257))
-
-Q3BedDaysBase <- c(69082, 19603, 27097, 47691, 50473, 76321, 206241, 42439, 87927, 148176, 7091, 2194, 2257, 70267, 4632, 861491)
-
-Q3BedDays <- format(Q3BedDaysBase, big.mark = ",")
-
-Q3RateBase <- c(27.5, 30.6, 14.8, 21.0, 19.8, 39.3, 38.3, 37.7, 27.3, 24.3, 0.0, 45.6, 0.0, 31.3, 0.0, 29.8)
-
-Q3Rate <- format(Q3RateBase, nsmall = 1)
-
-TableData <- data.frame(NHSBoard, Q2Cases, Q2BedDays, Q2Rate, Q3Cases, Q3BedDays, Q3Rate, stringsAsFactors = FALSE)
-
-TableData[16, c(2:7)] <- c("221", "910,937", "24.3", "257", "861,491", "29.8")
-```
-
-```{r Figures, echo = FALSE, message = FALSE, warning = FALSE, error = FALSE, include = FALSE}
-library(ggplot2)
-library(scales)
-library(captioner)
-library(flextable)
-library(officer)
-library(magrittr)
-
-fig_nums <- captioner(prefix = "Figure", infix = ":")
-
-# Create Figure 1
-HBR <- c("Ayrshire & Arran", "Borders", "Dumfries & Galloway", "Fife", "Forth Valley",
-         "Grampian", "Greater Glasgow & Clyde", "Highland", "Lanarkshire", "Lothian", 
-         "Orkney", "Shetland", "Tayside", "Western Isles", "Scotland")
-
-UptakeRate <- c(72, 76, 78, 69, 71, 79, 67, 77, 68, 69, 84, 84.5, 76, 80.5, 72)
-
-FigureOneData <- data.frame(HBR, UptakeRate)
-
-FigureOne <- ggplot(data = FigureOneData, aes(x = HBR, y = UptakeRate, fill = HBR)) +
-  geom_bar(position = "dodge", stat = "identity", width = 0.5, show.legend = F) + 
-  scale_y_continuous(breaks = c(50, 55, 60, 65, 70, 75, 80, 85, 90), 
-                     limits = c(50, 90), oob = rescale_none) +
-  geom_hline(yintercept = 70, size = 1, color = "#092869") +
-  geom_hline(yintercept = 80, size = 1, color = "#092869", linetype = "dashed") +
-  coord_flip() +
-  theme(panel.background = element_blank(),
-    panel.grid.major.x = element_line(size = .1, color = "#C0C0C0"), 
-    panel.grid.major.y = element_blank(),
-    axis.title.x = element_text(size = 12, face = "bold"),
-    axis.title.y = element_text(size = 12, face = "bold"),
-    axis.text = element_text(size = 12)) +
-  scale_x_discrete(limits = c("Scotland", "Western Isles", "Tayside", "Shetland", "Orkney", 
-                              "Lothian", "Lanarkshire", "Highland", "Greater Glasgow & Clyde",
-                              "Grampian", "Forth Valley", "Fife", "Dumfries & Galloway", 
-                              "Borders", "Ayrshire & Arran")) +
-  scale_fill_manual(values = c("#0391BF", "#0391BF", "#0391BF", "#0391BF", "#0391BF", 
-                               "#0391BF", "#0391BF", "#0391BF", "#0391BF", "#0391BF",
-                               "#0391BF", "#092869", "#0391BF", "#0391BF", "#0391BF")) +
-  xlab("NHS Board of Residence") + ylab("Uptake rate (%)")
-
-fig_nums(name = "uptake", caption = "Uptake rate^1^ by NHS Board by three-year rolling period 2013-16^1,2,3,4^")
-
-
-# Create Figure 2
-RollingYear <- c("2007-10", "2008-11", "2009-12", "2010-13", "2011-14", "2012-15", "2013-16")
-DetectionRate <- c(6.2, 6.5, 7, 7.1, 6.9, 6.4, 6.2)
-
-FigureTwoData <- data.frame(RollingYear, DetectionRate)
-
-FigureTwo <- ggplot(data = FigureTwoData, aes(x = RollingYear, y = DetectionRate)) +
-  geom_bar(position = "dodge", stat = "identity", width = 0.5, 
-            show.legend = F, fill = "#0391BF") + 
-  scale_y_continuous(breaks = c(0:8), 
-                     limits = c(0, 8)) +
-  geom_hline(yintercept = 3.1, size = 1, color = "#092869") +
-  geom_hline(yintercept = 4.1, size = 1, color = "#092869", linetype = "dashed") +
-  theme(panel.background = element_blank(),
-    panel.grid.major.x = element_blank(), 
-    panel.grid.major.y = element_line(size = .1, color = "#C0C0C0"), 
-    axis.title.x = element_text(size = 12, face = "bold"),
-    axis.title.y = element_text(size = 12, face = "bold"),
-    axis.text = element_text(size = 12)) +
-  xlab("Three Year Rolling Period") + ylab("Cancer detection rate \n (per 1000 women screened)")
-
-fig_nums(name = "cancer", caption = "Trend in invasive cancer detection rate for Scotland")
 ```
 
 ```{r glossary, echo = FALSE, message = FALSE, warning = FALSE, error = FALSE}
@@ -181,17 +87,19 @@ Description <- c("",
 MetaData <- data.frame(Indicator, Description)
 ```
 
-<Div custom-style = "Publication subtitle">This is a Management Information Publication</Div>
+<Div custom-style = "Publication subtitle">This is an Official Statistics Publication</Div>
 
-Published management information are non-official statistics which may be in the process of being transitioned into official statistics. They may not comply with the UK Statistics Authority’s Code of Practice with regard to high data quality or high public value but there is a public interest or a specific interest by a specialist user group in accessing these statistics as there are no associated official statistics available.
+Public Health Scotland has authority to produce official statistics on any matter in accordance with [The Official Statistics (Scotland) Order 2008](http://www.legislation.gov.uk/ssi/2008/131/contents/made), [The Official Statistics (Scotland) Amendment Order 2019](http://www.legislation.gov.uk/ssi/2019/416/made) and the [Statistics and Registration Service Act 2007](https://www.legislation.gov.uk/ukpga/2007/18/contents).
 
-Users should therefore be aware of the aspects of data quality and caveats surrounding these data, all of which are listed in this document.
+All official statistics should comply with the UK Statistics Authority’s Code of Practice which promotes the production and dissemination of official statistics that inform decision making. They can be formally assessed by the UK Statistics Authority’s regulatory arm for National Statistics status.
 
 <br>
 
-Find out more about Management Information publications at:  
-https://code.statisticsauthority.gov.uk/national-statisticians-guidance-management-information-and-official-statistics-3/
+Find out more about the Code of Practice on the [UK Statistics Authority website](https://code.statisticsauthority.gov.uk/). 
+
 <br>
+
+Find out more about Official Statistics on the [UK Statistics Authority website](https://code.statisticsauthority.gov.uk/glossary/#official-statistics).
 
 # Introduction
 This release by Information Services Division (ISD) reports on the Scottish Government’s Local Delivery Plan (LDP) standard that all those newly diagnosed with dementia should have a minimum of one year’s post-diagnostic support. Data are presented by financial year of diagnosis and this report presents finalised figures for 2016/17 and provisional figures for 2017/18 which are subject to some service users completing their support.
